fix: blurred whole page
Wrapped page in .page__outline.

--- a/src/component/Page/page.css
+++ b/src/component/Page/page.css
@@ -7,11 +7,16 @@
 	/* Below 20rem this will cause the viewport will scale. */
 	min-width: 20rem;
 }
+.page__outline {
+	flex-grow: 1;
+	display: flex;
+	flex-direction: column;
+}
 .page__main {
 	flex-grow: 1;
 }
 @media screen and (max-width: 48rem) {
-	.nav--enter .page__main {
+	.nav--enter .page__outline {
 		pointer-events: none;
 
 		-webkit-user-select: none;  /* Chrome all / Safari all */
